src/simpledb/parse/antlr/SQLBasicParser.java
package simpledb.parse.antlr; 
// Generated from .\simpledb\parse\antlr\SQLBasic.g4 by ANTLR 4.5.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SQLBasicParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		COMPARATOR=10, STRINGCONSTANT=11, FLOATCONTENTS=12, POSITIVE_INT=13, PLUS_OR_MINUS=14, 
		K_ABORT=15, K_ACTION=16, K_ADD=17, K_AFTER=18, K_ALL=19, K_DISTINCT=20, 
		K_ALTER=21, K_ANALYZE=22, K_AND=23, K_AS=24, K_ASC=25, K_BY=26, K_DESC=27, 
		K_FOR=28, K_FROM=29, K_GROUP=30, K_HAVING=31, K_IN=32, K_IS=33, K_LIMIT=34, 
		K_NOT=35, K_NULL=36, K_OF=37, K_OFFSET=38, K_ON=39, K_OR=40, K_ORDER=41, 
		K_SELECT=42, K_TO=43, K_WHERE=44, K_WITH=45, K_NULLS=46, K_TOP=47, K_COUNT=48, 
		K_AVG=49, K_MAX=50, K_MIN=51, K_FIRST=52, K_LAST=53, IDENTIFIER=54, SINGLE_LINE_COMMENT=55, 
		MULTILINE_COMMENT=56, SPACES=57, UNEXPECTED_CHAR=58;
	public static final int
		RULE_parse = 0, RULE_error = 1, RULE_select = 2, RULE_optional_top_term = 3, 
		RULE_distinct_or_all = 4, RULE_selectexpressions = 5, RULE_selectexpression = 6, 
		RULE_simpleselectexpression = 7, RULE_aggregateselectexpression = 8, RULE_aggregation = 9, 
		RULE_fromexpressions = 10, RULE_fromexpression = 11, RULE_subqueryfromexpression = 12, 
		RULE_name = 13, RULE_fullname = 14, RULE_optional_where_expression = 15, 
		RULE_optional_group_by_expression = 16, RULE_optional_having_expression = 17, 
		RULE_optional_order_by_expression = 18, RULE_sort_order = 19, RULE_null_order = 20, 
		RULE_optional_limit_expression = 21, RULE_optional_offset_expression = 22, 
		RULE_expression = 23, RULE_andcondition = 24, RULE_condition = 25, RULE_operand = 26, 
		RULE_constant = 27, RULE_intconstant = 28, RULE_floatconstant = 29, RULE_as_alias_expression = 30, 
		RULE_nothing = 31, RULE_unmatchable = 32;
	public static final String[] ruleNames = {
		"parse", "error", "select", "optional_top_term", "distinct_or_all", "selectexpressions", 
		"selectexpression", "simpleselectexpression", "aggregateselectexpression", 
		"aggregation", "fromexpressions", "fromexpression", "subqueryfromexpression", 
		"name", "fullname", "optional_where_expression", "optional_group_by_expression", 
		"optional_having_expression", "optional_order_by_expression", "sort_order", 
		"null_order", "optional_limit_expression", "optional_offset_expression", 
		"expression", "andcondition", "condition", "operand", "constant", "intconstant", 
		"floatconstant", "as_alias_expression", "nothing", "unmatchable"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "','", "'*'", "'.'", "'('", "')'", "'`'", "'\"'", "'''"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, "COMPARATOR", 
		"STRINGCONSTANT", "FLOATCONTENTS", "POSITIVE_INT", "PLUS_OR_MINUS", "K_ABORT", 
		"K_ACTION", "K_ADD", "K_AFTER", "K_ALL", "K_DISTINCT", "K_ALTER", "K_ANALYZE", 
		"K_AND", "K_AS", "K_ASC", "K_BY", "K_DESC", "K_FOR", "K_FROM", "K_GROUP", 
		"K_HAVING", "K_IN", "K_IS", "K_LIMIT", "K_NOT", "K_NULL", "K_OF", "K_OFFSET", 
		"K_ON", "K_OR", "K_ORDER", "K_SELECT", "K_TO", "K_WHERE", "K_WITH", "K_NULLS", 
		"K_TOP", "K_COUNT", "K_AVG", "K_MAX", "K_MIN", "K_FIRST", "K_LAST", "IDENTIFIER", 
		"SINGLE_LINE_COMMENT", "MULTILINE_COMMENT", "SPACES", "UNEXPECTED_CHAR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SQLBasic.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	  @Override
	  public void notifyErrorListeners(Token offendingToken, String msg, RecognitionException ex)
	  {
	    throw new RuntimeException(msg); 
	  }

	public SQLBasicParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public SelectContext select() {
			return getRuleContext(SelectContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SQLBasicParser.EOF, 0); }
		public List<ErrorContext> error() {
			return getRuleContexts(ErrorContext.class);
		}
		public ErrorContext error(int i) {
			return getRuleContext(ErrorContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).exitParse(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			setState(77);
			switch (_input.LA(1)) {
			case K_SELECT:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				select();
				setState(67);
				match(T__0);
				setState(68);
				match(EOF);
				}
				break;
			case EOF:
			case UNEXPECTED_CHAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==UNEXPECTED_CHAR) {
					{
					{
					setState(70);
					error();
					}
					}
					setState(75);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(76);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ErrorContext extends ParserRuleContext {
		public Token UNEXPECTED_CHAR;
		public TerminalNode UNEXPECTED_CHAR() { return getToken(SQLBasicParser.UNEXPECTED_CHAR, 0); }
		public ErrorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_error; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).enterError(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).exitError(this);
		}
	}

	public final ErrorContext error() throws RecognitionException {
		ErrorContext _localctx = new ErrorContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_error);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			((ErrorContext)_localctx).UNEXPECTED_CHAR = match(UNEXPECTED_CHAR);
			 throw new RuntimeException("UNEXPECTED_CHAR=" + (((ErrorContext)_localctx).UNEXPECTED_CHAR!=null?((ErrorContext)_localctx).UNEXPECTED_CHAR.getText():null)); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectContext extends ParserRuleContext {
		public TerminalNode K_SELECT() { return getToken(SQLBasicParser.K_SELECT, 0); }
		public SelectexpressionsContext selectexpressions() {
			return getRuleContext(SelectexpressionsContext.class,0);
		}
		public TerminalNode K_FROM() { return getToken(SQLBasicParser.K_FROM, 0); }
		public FromexpressionsContext fromexpressions() {
			return getRuleContext(FromexpressionsContext.class,0);
		}
		public Optional_top_termContext optional_top_term() {
			return getRuleContext(Optional_top_termContext.class,0);
		}
		public Distinct_or_allContext distinct_or_all() {
			return getRuleContext(Distinct_or_allContext.class,0);
		}
		public Optional_where_expressionContext optional_where_expression() {
			return getRuleContext(Optional_where_expressionContext.class,0);
		}
		public Optional_group_by_expressionContext optional_group_by_expression() {
			return getRuleContext(Optional_group_by_expressionContext.class,0);
		}
		public Optional_having_expressionContext optional_having_expression() {
			return getRuleContext(Optional_having_expressionContext.class,0);
		}
		public Optional_order_by_expressionContext optional_order_by_expression() {
			return getRuleContext(Optional_order_by_expressionContext.class,0);
		}
		public Optional_limit_expressionContext optional_limit_expression() {
			return getRuleContext(Optional_limit_expressionContext.class,0);
		}
		public Optional_offset_expressionContext optional_offset_expression() {
			return getRuleContext(Optional_offset_expressionContext.class,0);
		}
		public SelectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).enterSelect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).exitSelect(this);
		}
	}

	public final SelectContext select() throws RecognitionException {
		SelectContext _localctx = new SelectContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_select);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(K_SELECT);
			setState(84);
			_la = _input.LA(1);
			if (_la==K_TOP) {
				{
				setState(83);
				optional_top_term();
				}
			}

			setState(87);
			_la = _input.LA(1);
			if (_la==K_ALL || _la==K_DISTINCT) {
				{
				setState(86);
				distinct_or_all();
				}
			}

			setState(89);
			selectexpressions();
			setState(90);
			match(K_FROM);
			setState(91);
			fromexpressions();
			setState(93);
			_la = _input.LA(1);
			if (_la==K_WHERE) {
				{
				setState(92);
				optional_where_expression();
				}
			}

			setState(96);
			_la = _input.LA(1);
			if (_la==K_GROUP) {
				{
				setState(95);
				optional_group_by_expression();
				}
			}

			setState(99);
			_la = _input.LA(1);
			if (_la==K_HAVING) {
				{
				setState(98);
				optional_having_expression();
				}
			}

			setState(102);
			_la = _input.LA(1);
			if (_la==K_ORDER) {
				{
				setState(101);
				optional_order_by_expression();
				}
			}

			setState(105);
			_la = _input.LA(1);
			if (_la==K_LIMIT) {
				{
				setState(104);
				optional_limit_expression();
				}
			}

			setState(108);
			_la = _input.LA(1);
			if (_la==EOF) {
				{
				setState(107);
				optional_offset_expression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Optional_top_termContext extends ParserRuleContext {
		public TerminalNode K_TOP() { return getToken(SQLBasicParser.K_TOP, 0); }
		public TerminalNode POSITIVE_INT() { return getToken(SQLBasicParser.POSITIVE_INT, 0); }
		public Optional_top_termContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optional_top_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).enterOptional_top_term(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).exitOptional_top_term(this);
		}
	}

	public final Optional_top_termContext optional_top_term() throws RecognitionException {
		Optional_top_termContext _localctx = new Optional_top_termContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_optional_top_term);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(K_TOP);
			setState(111);
			match(POSITIVE_INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Distinct_or_allContext extends ParserRuleContext {
		public TerminalNode K_DISTINCT() { return getToken(SQLBasicParser.K_DISTINCT, 0); }
		public TerminalNode K_ALL() { return getToken(SQLBasicParser.K_ALL, 0); }
		public Distinct_or_allContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_distinct_or_all; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).enterDistinct_or_all(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).exitDistinct_or_all(this);
		}
	}

	public final Distinct_or_allContext distinct_or_all() throws RecognitionException {
		Distinct_or_allContext _localctx = new Distinct_or_allContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_distinct_or_all);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_la = _input.LA(1);
			if ( !(_la==K_ALL || _la==K_DISTINCT) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectexpressionsContext extends ParserRuleContext {
		public SelectexpressionContext selectexpression() {
			return getRuleContext(SelectexpressionContext.class,0);
		}
		public SelectexpressionsContext selectexpressions() {
			return getRuleContext(SelectexpressionsContext.class,0);
		}
		public SelectexpressionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectexpressions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).enterSelectexpressions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).exitSelectexpressions(this);
		}
	}

	public final SelectexpressionsContext selectexpressions() throws RecognitionException {
		SelectexpressionsContext _localctx = new SelectexpressionsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_selectexpressions);
		try {
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				selectexpression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				selectexpression();
				setState(117);
				match(T__1);
				setState(118);
				selectexpressions();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectexpressionContext extends ParserRuleContext {
		public SimpleselectexpressionContext simpleselectexpression() {
			return getRuleContext(SimpleselectexpressionContext.class,0);
		}
		public AggregateselectexpressionContext aggregateselectexpression() {
			return getRuleContext(AggregateselectexpressionContext.class,0);
		}
		public SelectexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectexpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).enterSelectexpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).exitSelectexpression(this);
		}
	}

	public final SelectexpressionContext selectexpression() throws RecognitionException {
		SelectexpressionContext _localctx = new SelectexpressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_selectexpression);
		try {
			setState(124);
			switch (_input.LA(1)) {
			case T__2:
			case T__6:
			case T__7:
			case T__8:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				simpleselectexpression();
				}
				break;
			case K_COUNT:
			case K_AVG:
			case K_MAX:
			case K_MIN:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				aggregateselectexpression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleselectexpressionContext extends ParserRuleContext {
		public FullnameContext fullname() {
			return getRuleContext(FullnameContext.class,0);
		}
		public As_alias_expressionContext as_alias_expression() {
			return getRuleContext(As_alias_expressionContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public SimpleselectexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleselectexpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).enterSimpleselectexpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).exitSimpleselectexpression(this);
		}
	}

	public final SimpleselectexpressionContext simpleselectexpression() throws RecognitionException {
		SimpleselectexpressionContext _localctx = new SimpleselectexpressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_simpleselectexpression);
		int _la;
		try {
			setState(135);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				match(T__2);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				fullname();
				setState(129);
				_la = _input.LA(1);
				if (_la==K_AS) {
					{
					setState(128);
					as_alias_expression();
					}
				}

				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(131);
				name();
				setState(132);
				match(T__3);
				setState(133);
				match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AggregateselectexpressionContext extends ParserRuleContext {
		public AggregationContext aggregation() {
			return getRuleContext(AggregationContext.class,0);
		}
		public SimpleselectexpressionContext simpleselectexpression() {
			return getRuleContext(SimpleselectexpressionContext.class,0);
		}
		public AggregateselectexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aggregateselectexpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).enterAggregateselectexpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).exitAggregateselectexpression(this);
		}
	}

	public final AggregateselectexpressionContext aggregateselectexpression() throws RecognitionException {
		AggregateselectexpressionContext _localctx = new AggregateselectexpressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_aggregateselectexpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			aggregation();
			setState(138);
			match(T__4);
			setState(139);
			simpleselectexpression();
			setState(140);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AggregationContext extends ParserRuleContext {
		public TerminalNode K_COUNT() { return getToken(SQLBasicParser.K_COUNT, 0); }
		public TerminalNode K_AVG() { return getToken(SQLBasicParser.K_AVG, 0); }
		public TerminalNode K_MAX() { return getToken(SQLBasicParser.K_MAX, 0); }
		public TerminalNode K_MIN() { return getToken(SQLBasicParser.K_MIN, 0); }
		public AggregationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aggregation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).enterAggregation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).exitAggregation(this);
		}
	}

	public final AggregationContext aggregation() throws RecognitionException {
		AggregationContext _localctx = new AggregationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_aggregation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << K_COUNT) | (1L << K_AVG) | (1L << K_MAX) | (1L << K_MIN))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FromexpressionsContext extends ParserRuleContext {
		public FromexpressionContext fromexpression() {
			return getRuleContext(FromexpressionContext.class,0);
		}
		public FromexpressionsContext fromexpressions() {
			return getRuleContext(FromexpressionsContext.class,0);
		}
		public FromexpressionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fromexpressions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).enterFromexpressions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).exitFromexpressions(this);
		}
	}

	public final FromexpressionsContext fromexpressions() throws RecognitionException {
		FromexpressionsContext _localctx = new FromexpressionsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_fromexpressions);
		try {
			setState(149);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(144);
				fromexpression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(145);
				fromexpression();
				setState(146);
				match(T__1);
				setState(147);
				fromexpressions();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FromexpressionContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public As_alias_expressionContext as_alias_expression() {
			return getRuleContext(As_alias_expressionContext.class,0);
		}
		public SubqueryfromexpressionContext subqueryfromexpression() {
			return getRuleContext(SubqueryfromexpressionContext.class,0);
		}
		public FromexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fromexpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).enterFromexpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLBasicListener ) ((SQLBasicListener)listener).exitFromexpression(this);
		}
	}

	public final FromexpressionContext fromexpression() throws RecognitionException {
		FromexpressionContext _localctx = new FromexpressionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_fromexpression);
		int _la;
		try {
			setState(156);
			switch (_input.LA(1)) {
			case T__6:
			case T__7:
			case T__8:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(151);
				name();
				setState(153);
				_la = _input.LA(1);
				if (_la==K_AS) {
					{
					setState(152);
					as_alias_expression();
					}
				}

				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(155);
				subqueryfromexpression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
